--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
         <head>
-            <title>NinjaTroll</title>
+                <title>NinjaTroll</title>
+                <meta charset="UTF-8">
+                <meta name="author" content="NinjaTroll">
+                <meta name="description" content="Um site pessoal feito para o compartilhamento de meus conhecimentos.">
+                <!-- A ser modificado: -->
+                <meta name="keywords" content="NinjaTroll, Blog">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+                <link rel="preconnect" href="https://fonts.googleapis.com">
+                <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+                <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Source+Code+Pro&family=Noto+Sans+JP&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
+                <link rel="stylesheet" href="css/default.css">
         </head>
         <body>
-                <p>Hello World!</p>
+                <header>
+                        <h1>NinjaTroll</h1>
+                        <nav>
+                                <ul>
+                                        <li><a href="#about-me">Sobre mim</a></li>
+                                        <li><a href="#">Projetos</a></li>
+                                        <li><input type="search" placeholder="Pesquisar..."></li>
+                                </ul>
+                        </nav>
+                </header>
+                <main>
+                        <article>
+                                <h2>Publicações recentes</h2>
+                                <ul></ul>
+                        </article>
+                        <footer>
+                                <div id="about-me">
+                                        <p></p>
+                                        <img src="res/FotoDePerfil.jpg" alt="Minha linda foto de perfil">
+                                </div>
+                        </footer>
+                </main>
         </body>
 </html>
